deploy: 5b55211511ffe12a63f3456bbf09c726e9fd878c

--- a/print.html
+++ b/print.html
@@ -1563,7 +1563,64 @@ from a dependency? why don’t you reimplement it?</figcaption>
 </div>
 <p>which is actually an architecture decision</p>
 </div>
-<h2 id="complexity-classes"><a class="header" href="#complexity-classes">complexity classes</a></h2>
+<h2 id="reimplementation-costs"><a class="header" href="#reimplementation-costs">reimplementation costs</a></h2>
+<div class="columns">
+<div class="column" width="50%">
+<p><span class="text-smaller">estimation by the Linux Foundation
+(Foundation, 2008)</span></p>
+<ul>
+<li>Linux kernel (2008) 6.8 million LOC</li>
+<li>COnstructive COst MOdel (COCOMO) for cost estimation</li>
+<li>using 2008 US salaries: $1.4 billion</li>
+<li>development effort estimation exceeds 7500 Person-Years</li>
+</ul>
+<div>
+<p>Linux 6.16 (released 2025-08-07) has about 40 million LOC</p>
+</div>
+</div>
+<div class="column text-smaller mt-2" width="50%">
+<table>
+<caption>how much code does a developer write? <span class="citation"
+data-cites="mcenery2020how">(McEnery, 2020)</span></caption>
+<thead>
+<tr class="header">
+<th style="text-align: center;">years of coding</th>
+<th style="text-align: right;">avg. lines per day</th>
+<th style="text-align: right;">lines per year</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: center;">1-5</td>
+<td style="text-align: right;">100</td>
+<td style="text-align: right;">25,000</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">5-10</td>
+<td style="text-align: right;">80</td>
+<td style="text-align: right;">20,000</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">10-15</td>
+<td style="text-align: right;">60</td>
+<td style="text-align: right;">15,000</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">15-20</td>
+<td style="text-align: right;">40</td>
+<td style="text-align: right;">10,000</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">20+</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">5,000</td>
+</tr>
+</tbody>
+</table>
+<p>how much code does a developer write? (McEnery, 2020)</p>
+</div>
+</div>
+<h1 id="complexity-classes"><a class="header" href="#complexity-classes">complexity classes</a></h1>
 <div class="text-smaller">
 <blockquote>
 <p>There are known knowns; there are things we know we know. We also know
@@ -1816,12 +1873,27 @@ https://spectrum.ieee.org/meerkat-substation-security
 IV, D. T., &amp; Merendino, T. (2008). <em>The method framework for engineering
 system architectures</em>. Auerbach Publications.</p>
 </div>
+<div id="ref-linuxfoundation2008linux" class="csl-entry">
+<p>Foundation, T. L. (2008). <em>Linux foundation publishes study estimating
+the value of linux</em>. <a href="lectures/
+                   https://www.linuxfoundation.org/press/press-release/linux-foundation-publishes-study-estimating-the-value-of-linux
+                    " class="uri">
+https://www.linuxfoundation.org/press/press-release/linux-foundation-publishes-study-estimating-the-value-of-linux
+</a>.</p>
+</div>
 <div id="ref-harding2024san" class="csl-entry">
 <p>Harding, S. (2024). San francisco’s train system still uses floppy
 disks—and will for years. In <em>Ars Technica</em>. <a href="lectures/
                     https://www.wired.com/story/san-francisco-muni-trains-floppy-disks
                     " class="uri">
 https://www.wired.com/story/san-francisco-muni-trains-floppy-disks
+</a>.</p>
+</div>
+<div id="ref-mcenery2020how" class="csl-entry">
+<p>McEnery, S. (2020). <em>How much computer code has been written?</em> <a href="lectures/
+                   https://medium.com/modern-stack/how-much-computer-code-has-been-written-c8c03100f459
+                    " class="uri">
+https://medium.com/modern-stack/how-much-computer-code-has-been-written-c8c03100f459
 </a>.</p>
 </div>
 <div id="ref-quill2024how" class="csl-entry">
