deploy: ef367ad273f135c0cfa33f603f32adb7f48d57bc

--- a/print.html
+++ b/print.html
@@ -1826,18 +1826,34 @@ decisions</a></p>
 Architecture</a></p>
 </div>
 <h2 id="-3"><a class="header" href="#-3"></a></h2>
+<div class="wide-quote">
 <blockquote>
 <p>Architecture is the decisions that you wish you could get right early
 in a project.</p>
 <p>– Ralph Johnson</p>
 </blockquote>
+</div>
+<figure>
+<img src="lectures/figures/cost_of_fixing.drawio.svg" height="200"
+alt="the rising costs of finding and fixing defects based on Figure 3.4 of (Ambler, 2002) (Ambler, 2002)" />
+<figcaption aria-hidden="true">the rising costs of finding and fixing
+defects based on Figure 3.4 of <span class="citation"
+data-cites="ambler2002agile">(Ambler, 2002)</span> (Ambler,
+2002)</figcaption>
+</figure>
 <p>. . .</p>
+<div class="mt-2">
 <p>to do that, you need to know all the unknowns, so you need
 <strong>requirements analysis</strong>, and <strong>learning</strong> the new/unknown technology</p>
+</div>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs"
 class="text-smaller references csl-bib-body hanging-indent"
 line-spacing="2">
+<div id="ref-ambler2002agile" class="csl-entry">
+<p>Ambler, S. (2002). <em>Agile modeling: Effective practices for extreme
+programming and the unified process</em>. John Wiley &amp; Sons.</p>
+</div>
 <div id="ref-bykovski2020simple" class="csl-entry">
 <p>Bykovski, M. (2020). <em>Simple vs. Complicated vs. Complex vs. chaotic</em>.
 <a href="lectures/
