--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -1648,15 +1648,26 @@ to Software Architecture</a></p>
 </section>
 <section id="section-3" class="slide level2">
 <h2></h2>
+<div class="wide-quote">
 <blockquote>
 <p>Architecture is the decisions that you wish you could get right early
 in a project.</p>
 <p>– Ralph Johnson</p>
 </blockquote>
+</div>
+<figure>
+<img data-src="figures/cost_of_fixing.drawio.svg" height="200"
+alt="the rising costs of finding and fixing defects based on Figure 3.4 of [17] (Ambler, 2002)" />
+<figcaption aria-hidden="true">the rising costs of finding and fixing
+defects based on Figure 3.4 of <span class="citation"
+data-cites="ambler2002agile">[17]</span> (Ambler, 2002)</figcaption>
+</figure>
 <div class="fragment">
+<div class="mt-2">
 <p>to do that, you need to know all the unknowns, so you need
 <strong>requirements analysis</strong>, and <strong>learning</strong>
 the new/unknown technology</p>
+</div>
 </div>
 </section></section>
 <section id="references" class="title-slide slide level1">
@@ -1797,6 +1808,11 @@ class="uri">https://en.wikipedia.org/w/index.php?title=Cynefin_framework&amp;old
 D. Stacey, <em>Strategic management and organisational dynamics: The
 challenge of complexity to ways of thinking about organisations</em>.
 Pearson education, 2007.</div>
+</div>
+<div id="ref-ambler2002agile" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[17] </div><div class="csl-right-inline">S.
+Ambler, <em>Agile modeling: Effective practices for extreme programming
+and the unified process</em>. John Wiley &amp; Sons, 2002.</div>
 </div>
 </div>
 </section>
