--- a/print.html
+++ b/print.html
@@ -162,8 +162,8 @@
                         <h1 id="software-engineering"><a class="header" href="#software-engineering">Software Engineering</a></h1>
 <h2 id="week-1"><a class="header" href="#week-1">week 1</a></h2>
 <ol>
-<li><a href="lectures/slides/00_intro.html">intro, software architecture</a></li>
-<li><a href="lectures/slides/01_project_assignment.html">project assignment</a></li>
+<li><a href="lectures//slides/00_intro.html">intro, software architecture</a></li>
+<li><a href="lectures//slides/01_project_assignment.html">project assignment</a></li>
 </ol>
 <h3 id="readings"><a class="header" href="#readings">readings</a></h3>
 <ul>
@@ -189,11 +189,11 @@ matrix</a></li>
 </ul>
 <h2 id="week-2"><a class="header" href="#week-2">week 2</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_week01.html">week 1 summary</a></li>
-<li><a href="lectures/slides/01_sdlc.html">software development life cycles</a></li>
-<li><a href="lectures/slides/02_scrum.html">scrum</a></li>
-<li><a href="lectures/slides/03_kanban.html">kanban</a></li>
-<li><a href="lectures/slides/02_user_story.html">sample task</a></li>
+<li><a href="lectures//slides/summary_week01.html">week 1 summary</a></li>
+<li><a href="lectures//slides/01_sdlc.html">software development life cycles</a></li>
+<li><a href="lectures//slides/02_scrum.html">scrum</a></li>
+<li><a href="lectures//slides/03_kanban.html">kanban</a></li>
+<li><a href="lectures//slides/02_user_story.html">sample task</a></li>
 </ol>
 <h3 id="readings-1"><a class="header" href="#readings-1">readings</a></h3>
 <p>extreme programming</p>
@@ -219,10 +219,10 @@ Scrum</a></li>
 </ul>
 <h2 id="week-3"><a class="header" href="#week-3">week 3</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_week02.html">week 2 summary</a></li>
-<li><a href="lectures/slides/04_requirement_analysis.html">requirement analysis</a></li>
-<li><a href="lectures/slides/05_user_story_mapping.html">user story mapping</a></li>
-<li><a href="lectures/slides/project.html">project assignment</a></li>
+<li><a href="lectures//slides/summary_week02.html">week 2 summary</a></li>
+<li><a href="lectures//slides/04_requirement_analysis.html">requirement analysis</a></li>
+<li><a href="lectures//slides/05_user_story_mapping.html">user story mapping</a></li>
+<li><a href="lectures//slides/project.html">project assignment</a></li>
 </ol>
 <h3 id="readings-2"><a class="header" href="#readings-2">readings</a></h3>
 <p>requirement analysis</p>
@@ -271,9 +271,9 @@ Code</a></li>
 </ul>
 <h2 id="week-4"><a class="header" href="#week-4">week 4</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_week03.html">week 3 summary</a></li>
-<li><a href="lectures/slides/06_uml.html">UML</a></li>
-<li><a href="lectures/slides/07_c4.html">C4</a></li>
+<li><a href="lectures//slides/summary_week03.html">week 3 summary</a></li>
+<li><a href="lectures//slides/06_uml.html">UML</a></li>
+<li><a href="lectures//slides/07_c4.html">C4</a></li>
 </ol>
 <h4 id="readings-3"><a class="header" href="#readings-3">readings</a></h4>
 <p>UML</p>
@@ -296,8 +296,8 @@ depth</a></li>
 </ul>
 <h2 id="week-5"><a class="header" href="#week-5">week 5</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_week04.html">week 4 summary</a></li>
-<li><a href="lectures/slides/08_patterns.html">design patterns</a></li>
+<li><a href="lectures//slides/summary_week04.html">week 4 summary</a></li>
+<li><a href="lectures//slides/08_patterns.html">design patterns</a></li>
 </ol>
 <h3 id="readings-4"><a class="header" href="#readings-4">readings</a></h3>
 <ul>
@@ -355,9 +355,9 @@ by Scott Wlaschin</li>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_week05.html">week 5 summary</a></li>
-<li><a href="lectures/slides/09_interfaces.html">interfaces</a></li>
-<li><a href="lectures/slides/10_planning.html">implementation planning</a></li>
+<li><a href="lectures//slides/summary_week05.html">week 5 summary</a></li>
+<li><a href="lectures//slides/09_interfaces.html">interfaces</a></li>
+<li><a href="lectures//slides/10_planning.html">implementation planning</a></li>
 </ol>
 <h3 id="readings-5"><a class="header" href="#readings-5">readings</a></h3>
 <ul>
@@ -374,9 +374,9 @@ Example</a></li>
 </ul>
 <h2 id="week-7"><a class="header" href="#week-7">week 7</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_week06.html">week 6 summary</a></li>
-<li><a href="lectures/slides/11_wireframing.html">wireframing</a></li>
-<li><a href="lectures/slides/12_clean_code.html">clean code</a></li>
+<li><a href="lectures//slides/summary_week06.html">week 6 summary</a></li>
+<li><a href="lectures//slides/11_wireframing.html">wireframing</a></li>
+<li><a href="lectures//slides/12_clean_code.html">clean code</a></li>
 </ol>
 <h3 id="readings-6"><a class="header" href="#readings-6">readings</a></h3>
 <ul>
@@ -390,9 +390,9 @@ products</a> - by balsamiq</li>
 </ul>
 <h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_week07.html">week 7 summary</a></li>
-<li><a href="lectures/slides/13_code_quality.html">code quality</a></li>
-<li><a href="lectures/slides/14_code_review.html">code review</a></li>
+<li><a href="lectures//slides/summary_week07.html">week 7 summary</a></li>
+<li><a href="lectures//slides/13_code_quality.html">code quality</a></li>
+<li><a href="lectures//slides/14_code_review.html">code review</a></li>
 </ol>
 <h3 id="readings-7"><a class="header" href="#readings-7">readings</a></h3>
 <ul>
@@ -413,8 +413,8 @@ One)</a> - by Michael Lynch
 </ul>
 <h2 id="week-10"><a class="header" href="#week-10">week 10</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_week09.html">week 9 summary</a></li>
-<li><a href="lectures/slides/15_testing.html">testing</a></li>
+<li><a href="lectures//slides/summary_week09.html">week 9 summary</a></li>
+<li><a href="lectures//slides/15_testing.html">testing</a></li>
 </ol>
 <h3 id="readings-8"><a class="header" href="#readings-8">readings</a></h3>
 <ul>
@@ -449,8 +449,8 @@ by James O Coplien</li>
 </ul>
 <h2 id="week-11"><a class="header" href="#week-11">week 11</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_week10.html">week 10 summary</a></li>
-<li><a href="lectures/slides/16_automatization.html">automatization</a></li>
+<li><a href="lectures//slides/summary_week10.html">week 10 summary</a></li>
+<li><a href="lectures//slides/16_automatization.html">automatization</a></li>
 </ol>
 <h3 id="readings-9"><a class="header" href="#readings-9">readings</a></h3>
 <ul>
@@ -494,9 +494,9 @@ anymore</a> - by Brett Cannon</li>
 </ul>
 <h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
 <ol>
-<li><a href="lectures/slides/summary_full.html">summary</a></li>
-<li><a href="lectures/slides/mindmap.html">mindmap</a></li>
-<li><a href="lectures/slides/mock_exam.html">mock exam</a></li>
+<li><a href="lectures//slides/summary_full.html">summary</a></li>
+<li><a href="lectures//slides/mindmap.html">mindmap</a></li>
+<li><a href="lectures//slides/mock_exam.html">mock exam</a></li>
 </ol>
 <div style="break-before: page; page-break-before: always;"></div><p>The goal of this course is to provide a common foundation in software
 engineering for students from various backgrounds. It aims to provide a
