deploy: 7781d9f2daa1916dfd22cfa163f53d7a5f925144

--- a/print.html
+++ b/print.html
@@ -12324,7 +12324,85 @@ width="300" /></p>
 <div class="notes">
 <p>that is why I previously said that trust in your IDE</p>
 </div>
-<h1 id="version-control-systems"><a class="header" href="#version-control-systems">version control systems</a></h1>
+<h1 id="version-control-1"><a class="header" href="#version-control-1">version control</a></h1>
+<div class="columns">
+<div class="column mt-4" width="55%">
+<ul>
+<li>version control (a.k.a. revision control) is system for recording and
+managing changes made in files</li>
+<li>commonly used to manage source code
+<ul>
+<li>however, it can be used to tracking changes to any kind of files</li>
+</ul>
+</li>
+<li>people often employ their own version control system, without
+realising it</li>
+</ul>
+</div>
+<div class="column" width="45%">
+<figure>
+<img src="lectures/figures/intuitive_version_tracking.svg"
+alt="custom versioning using folders and files, based on Simon Mutch’s original" />
+<figcaption aria-hidden="true">custom versioning using folders and
+files, based on Simon Mutch’s <a
+href="http://smutch.github.io/VersionControlTutorial/pages/0-intro.html">original</a></figcaption>
+</figure>
+</div>
+</div>
+<div class="text-smaller mt-3">
+<p>based on Simon Mutch’s <a href="http://smutch.github.io/VersionControlTutorial/pages/0-intro.html">Version Control
+materials</a></p>
+</div>
+<div class="notes">
+<p><a href="lectures/figures/borrowed/vc-xkcd.jpg">Simon Mutch | [CC BY-SA
+3.0](https://creativecommons.org/licenses/by-sa/3.0/deed.en) |
+[source](https://gist.github.com/smutch/4951871)</a></p>
+</div>
+<h2 id="why-you-should-use-version-control-for-everything-1"><a class="header" href="#why-you-should-use-version-control-for-everything-1">why you should use version control (for everything)</a></h2>
+<div class="wide-quote">
+<blockquote>
+<p>In practice, everything that has been created manually should be put
+in version control, including programs, original field observations,
+and the source files for papers.</p>
+<p>– Best Practices for Scientific Computing; Wilson et al. 2012
+(<a href="https://arxiv.org/abs/1210.0530">arXiv:1210.0530</a>)</p>
+</blockquote>
+</div>
+<div class="mt-5">
+<p>this presentation is under version control as well</p>
+</div>
+<div class="notes">
+<p>Many services have some kind of version control built in. For example
+Google Docs or Microsoft Word also provides some level of version
+control.</p>
+</div>
+<h2 id="benefits-of-version-control-systems-1"><a class="header" href="#benefits-of-version-control-systems-1">benefits of version control systems</a></h2>
+<ul>
+<li>generate backups</li>
+<li>separates experiments from the working version
+<ul>
+<li>branching, deployment strategies (much later in the course)</li>
+</ul>
+</li>
+<li>keep history and track changes
+<ul>
+<li>traceability</li>
+</ul>
+</li>
+<li>foster collaboration and contribution
+<ul>
+<li>team work</li>
+</ul>
+</li>
+</ul>
+<p>The current level of software complexity is not manageable without
+allowing many people to work on the same code base, and the separation
+of the development versions from the production one.</p>
+<div class="mt-3">
+<p><strong>later on the course</strong>: the types and operation of version control
+systems</p>
+</div>
+<h1 id="collaboration-via-version-control-systems"><a class="header" href="#collaboration-via-version-control-systems">collaboration via version control systems</a></h1>
 <div class="columns">
 <div class="column mt-2" width="55%">
 <ul>
