--- a/slides/16_automatization.html
+++ b/slides/16_automatization.html
@@ -252,8 +252,92 @@ width="300" /></p>
 </aside>
 </section></section>
 <section>
-<section id="version-control-systems" class="title-slide slide level1">
-<h1>version control systems</h1>
+<section id="version-control" class="title-slide slide level1">
+<h1>version control</h1>
+<div class="columns">
+<div class="column mt-4" style="width:55%;">
+<ul>
+<li>version control (a.k.a. revision control) is system for recording
+and managing changes made in files</li>
+<li>commonly used to manage source code
+<ul>
+<li>however, it can be used to tracking changes to any kind of
+files</li>
+</ul></li>
+<li>people often employ their own version control system, without
+realising it</li>
+</ul>
+</div><div class="column" style="width:45%;">
+<figure>
+<img data-src="figures/intuitive_version_tracking.svg"
+alt="custom versioning using folders and files, based on Simon Mutch’s original" />
+<figcaption aria-hidden="true">custom versioning using folders and
+files, based on Simon Mutch’s <a
+href="http://smutch.github.io/VersionControlTutorial/pages/0-intro.html">original</a></figcaption>
+</figure>
+</div>
+</div>
+<div class="text-smaller mt-3">
+<p>based on Simon Mutch’s <a
+href="http://smutch.github.io/VersionControlTutorial/pages/0-intro.html">Version
+Control materials</a></p>
+</div>
+<aside class="notes">
+<p><a href="figures/borrowed/vc-xkcd.jpg">Simon Mutch | [CC BY-SA
+3.0](https://creativecommons.org/licenses/by-sa/3.0/deed.en) |
+[source](https://gist.github.com/smutch/4951871)</a></p>
+</aside>
+</section>
+<section id="why-you-should-use-version-control-for-everything"
+class="slide level2">
+<h2>why you should use version control (for everything)</h2>
+<div class="wide-quote">
+<blockquote>
+<p>In practice, everything that has been created manually should be put
+in version control, including programs, original field observations, and
+the source files for papers.</p>
+<p>– Best Practices for Scientific Computing; Wilson et al. 2012 (<a
+href="https://arxiv.org/abs/1210.0530">arXiv:1210.0530</a>)</p>
+</blockquote>
+</div>
+<div class="mt-5">
+<p>this presentation is under version control as well</p>
+</div>
+<aside class="notes">
+<p>Many services have some kind of version control built in. For example
+Google Docs or Microsoft Word also provides some level of version
+control.</p>
+</aside>
+</section>
+<section id="benefits-of-version-control-systems" class="slide level2">
+<h2>benefits of version control systems</h2>
+<ul>
+<li>generate backups</li>
+<li>separates experiments from the working version
+<ul>
+<li>branching, deployment strategies (much later in the course)</li>
+</ul></li>
+<li>keep history and track changes
+<ul>
+<li>traceability</li>
+</ul></li>
+<li>foster collaboration and contribution
+<ul>
+<li>team work</li>
+</ul></li>
+</ul>
+<p>The current level of software complexity is not manageable without
+allowing many people to work on the same code base, and the separation
+of the development versions from the production one.</p>
+<div class="mt-3">
+<p><strong>later on the course</strong>: the types and operation of
+version control systems</p>
+</div>
+</section></section>
+<section>
+<section id="collaboration-via-version-control-systems"
+class="title-slide slide level1">
+<h1>collaboration via version control systems</h1>
 <div class="columns">
 <div class="column mt-2" style="width:55%;">
 <ul>
