deploy: 51cf9fd9857368bb4023cac0ed8ad912b2b0b064

--- a/lectures/01_sdlc.html
+++ b/lectures/01_sdlc.html
@@ -245,7 +245,8 @@ of the software.</p>
 </div>
 <div class="column" width="50%">
 <div class="r-stack">
-<img src="figures/iterative.drawio.svg" width="500" />
+<p><img src="figures/iterative.drawio.svg"
+data-preview-image="figures/iterative.drawio.svg" width="500" /></p>
 </div>
 </div>
 </div>
