--- a/print.html
+++ b/print.html
@@ -2053,7 +2053,8 @@ of the software.</p>
 </div>
 <div class="column" width="50%">
 <div class="r-stack">
-<img src="lectures/figures/iterative.drawio.svg" width="500" />
+<p><img src="lectures/figures/iterative.drawio.svg"
+data-preview-image="figures/iterative.drawio.svg" width="500" /></p>
 </div>
 </div>
 </div>
