--- a/slides/01_sdlc.html
+++ b/slides/01_sdlc.html
@@ -173,7 +173,8 @@ ones</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <div class="r-stack">
-<p><img data-src="figures/iterative.drawio.svg" width="500" /></p>
+<p><img data-src="figures/iterative.drawio.svg"
+data-preview-image="figures/iterative.drawio.svg" width="500" /></p>
 </div>
 </div>
 </div>
