deploy: 3e02f512de80768293e5472ac7ce3b334b1b2adf

--- a/print.html
+++ b/print.html
@@ -2604,16 +2604,16 @@ time (Wikipedia contributors, 2024)</p>
 <ul>
 <li>two week sprint</li>
 <li>26 tasks</li>
-<li>ideal work line (green)</li>
-</ul>
-</div>
-<div class="fragment fade-in" data-fragment-index="1">
-<ul>
-<li>actual work line (red)
+<li>ideal work line (green)
 <ul>
 <li>not realistic</li>
 </ul>
 </li>
+</ul>
+</div>
+<div class="fragment fade-in" data-fragment-index="1">
+<ul>
+<li>actual work line (red)</li>
 <li>finished tasks per day (blue bars)</li>
 </ul>
 </div>
@@ -2832,10 +2832,7 @@ permission</figcaption>
 </ul>
 </li>
 <li>the attendees collaborate on<br>what to do next</li>
-<li>the product backlog may also be adjusted to meet new opportunities<!--- should not limiting it to a presentation, the working product should be demonstrated and discussed
-- timeboxed to a maximum of four hours for a one-month sprint
-    - for shorter sprints, the event is usually shorter-->
-</li>
+<li>the product backlog may also be adjusted to meet new opportunities</li>
 </ul>
 </div>
 <div class="column" width="50%">
@@ -2917,10 +2914,10 @@ effectiveness</li>
 </div>
 <h2 id="retrospective-starfish"><a class="header" href="#retrospective-starfish">retrospective starfish</a></h2>
 <div class="columns">
-<div class="column" width="50%">
-<p><img src="lectures/figures/retro.drawio.svg" alt="" /></p>
+<div class="column" width="55%">
+<p><img src="lectures/figures/retrospective_starfish.drawio.svg" alt="" /></p>
 </div>
-<div class="column" width="50%">
+<div class="column mt-4" width="45%">
 <ul>
 <li>divide the whiteboard to 5 parts</li>
 <li>every team member adds sticky notes to the respective parts</li>
