--- a/slides/02_scrum.html
+++ b/slides/02_scrum.html
@@ -417,15 +417,15 @@ data-cites="enwiki:1219224248">[2]</span></p>
 <ul>
 <li>two week sprint</li>
 <li>26 tasks</li>
-<li>ideal work line (green)</li>
+<li>ideal work line (green)
+<ul>
+<li>not realistic</li>
+</ul></li>
 </ul>
 </div>
 <div class="fragment fade-in" data-fragment-index="1">
 <ul>
-<li>actual work line (red)
-<ul>
-<li>not realistic</li>
-</ul></li>
+<li>actual work line (red)</li>
 <li>finished tasks per day (blue bars)</li>
 </ul>
 </div>
@@ -679,10 +679,8 @@ permission</figcaption>
 <!-- - the scrum team and stakeholders review what was accomplished in the sprint --></li>
 </ul></li>
 <li>the attendees collaborate on<br>what to do next</li>
-<li>the product backlog may also be adjusted to meet new opportunities
-<!--- should not limiting it to a presentation, the working product should be demonstrated and discussed
-- timeboxed to a maximum of four hours for a one-month sprint
-    - for shorter sprints, the event is usually shorter--></li>
+<li>the product backlog may also be adjusted to meet new
+opportunities</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <figure>
@@ -769,9 +767,9 @@ class="slide level2 exclude-header">
 <section id="retrospective-starfish" class="slide level2">
 <h2>retrospective starfish</h2>
 <div class="columns">
-<div class="column" style="width:50%;">
-<p><img data-src="figures/retro.drawio.svg" /></p>
-</div><div class="column" style="width:50%;">
+<div class="column" style="width:55%;">
+<p><img data-src="figures/retrospective_starfish.drawio.svg" /></p>
+</div><div class="column mt-4" style="width:45%;">
 <ul>
 <li>divide the whiteboard to 5 parts</li>
 <li>every team member adds sticky notes to the respective parts</li>
