deploy: 8e3be7d57dd7e16d1a0350a3be85410230675314

--- a/lectures/03_kanban.html
+++ b/lectures/03_kanban.html
@@ -181,7 +181,7 @@ billboard, actually).</p>
 </div>
 <h2 id="principles-of-kanban"><a class="header" href="#principles-of-kanban">principles of kanban</a></h2>
 <div class="columns">
-<div class="column" width="70%">
+<div class="column mt-3" width="70%">
 <ol>
 <li>defining and visualizing a workflow</li>
 <li>actively managing items in a workflow</li>
