--- a/slides/03_kanban.html
+++ b/slides/03_kanban.html
@@ -105,7 +105,7 @@ or billboard, actually).</p>
 <section id="principles-of-kanban" class="slide level2">
 <h2>principles of kanban</h2>
 <div class="columns">
-<div class="column" style="width:70%;">
+<div class="column mt-3" style="width:70%;">
 <ol type="1">
 <li>defining and visualizing a workflow</li>
 <li>actively managing items in a workflow</li>
