deploy: 91c962eef17cfbb3415bda2e40e3cbe69769d383

--- a/slides/02_user_story.html
+++ b/slides/02_user_story.html
@@ -420,6 +420,18 @@ and the unified process</em>. John Wiley &amp; Sons, 2002.</div>
 </div>
 </div>
 </section>
+
+<section id="requirements-analysis-in-as-a-mindmap"
+class="title-slide slide level1" data-visibility="uncounted">
+<h1 data-visibility="uncounted">requirements analysis in as a
+mindmap</h1>
+<div class="r-fit-text mt-3">
+<p><a
+href="https://markmap.js.org/repl#?d=github%3Apintergreg%2Fsoftware-engineering%40refs%3Aheads%2Fmain%2Fpracticals%2Fra.md">open
+markmap editor</a></p>
+<p>with an incomplete requirements analysis</p>
+</div>
+</section>
     </div>
   </div>
 
